fixes #160 Notify non activated DLAs